[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://addons/virtual_joystick/scripts/virtual_joystick.gd" type="Script" id=3]
[ext_resource path="res://addons/virtual_joystick/sprites/joystick.png" type="Texture" id=4]
[ext_resource path="res://addons/virtual_joystick/sprites/stick.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Weapon2.png" type="Texture" id=6]
[ext_resource path="res://UI/Font2.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.666667, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.321569, 0.321569, 0.321569, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 8

[sub_resource type="CircleShape2D" id=1]
radius = 73.3333

[sub_resource type="CircleShape2D" id=2]
radius = 73.3333

[node name="Player" type="KinematicBody2D" groups=["Players"]]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="Weapon" type="Sprite" parent="."]
position = Vector2( 110, 0 )
rotation = -1.5708
texture = ExtResource( 6 )

[node name="Position2D" type="Position2D" parent="Weapon"]
position = Vector2( -1.45705e-06, 33.3333 )
rotation = 1.5708

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="VirtualJoystick" type="Node2D" parent="CanvasLayer"]
visible = false
modulate = Color( 0, 1, 0.0862745, 1 )
position = Vector2( 124, 606 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )
border = ExtResource( 4 )
stick = ExtResource( 5 )

[node name="VirtualJoystick2" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2( 1163, 631 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )
border = ExtResource( 4 )
stick = ExtResource( 5 )

[node name="LifeBar" type="ProgressBar" parent="CanvasLayer"]
margin_top = 70.0
margin_right = 220.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 7 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 10.0
value = 40.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="bulletcd" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="DeathScreen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="DeathScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.494118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DeathScreen/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -32.0
margin_right = 38.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 7 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SyncPlayer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="analogic_chage" from="CanvasLayer/VirtualJoystick" to="." method="_on_VirtualJoystick_analogic_chage"]
[connection signal="analogic_chage" from="CanvasLayer/VirtualJoystick2" to="." method="_on_VirtualJoystick2_analogic_chage"]
[connection signal="timeout" from="bulletcd" to="." method="_on_bulletcd_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="pressed" from="DeathScreen/ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="SyncPlayer" to="." method="_on_SyncPlayer_timeout"]
